<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Mycelium Bitcoin Wallet</string>
    <string name="app_short_name">Mycelium</string>
    <string name="add_account_title">Add New Account</string>
    <string name="add_unrelated_account_title">Add Unrelated Account</string>
    <string name="import_seed_title">Import Master Seed</string>
    <string name="import_words_title">Enter Word List</string>
    <string name="add_account_desc">Mycelium supports HD Accounts and Single Address Accounts. All created HD Accounts are based on the same Master Seed.</string>
    <string name="add_single_acc_info">In order to add a Single Address Account based on a private key or a read-only address, please click the Advanced button below.</string>
    <string name="scan_desc">Scan Bitcoin address, private key or HD-Account.</string>
    <string name="scan_seed">Scan Master Seed from Mycelium Backup</string>
    <string name="use_acc_first">You can only have one unused HD Account.</string>
    <string name="clipboard_desc">Import Bitcoin address or private key from clipboard.</string>
    <string name="wordlist_des">Create Master Seed from Word List</string>
    <string name="scan">Scan</string>
    <string name="advanced">Advanced</string>
    <string name="clipboard">Clipboard</string>
    <string name="enter_wordlist">Enter Word List</string>
    <string name="hd_account">Add HD Account</string>
    <string name="close">Close</string>
    <string name="sending">Sending %1$s</string>
    <string name="receiving">Receiving %1$s</string>
    <string name="an_icon">an icon</string>
    <string name="confirmations">%d Confirmations</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="private_key_deleted">Private key deleted.</string>
    <string name="account_deleted">Account deleted</string>
    <string name="amount_hint">0.00</string>
    <string name="amount_hint_denomination">0.00 %1$s</string>
    <string name="enter_recipient_title">Enter Recipient Address</string>
    <string name="recipient_title">Recipient Address</string>
    <string name="amount_label">Amount:</string>
    <string name="amount_title">Amount</string>
    <string name="enter_amount_title">Enter Amount</string>
    <string name="max_btc">Spendable: %1$s</string>
    <string name="max_fiat">Spendable: %1$s %2$s</string>
    <string name="qr_code">QR Code</string>
    <string name="my_addresses">My Addresses</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="insufficient_funds_for_fee">Insufficient funds to pay fee</string>
    <string name="amount_too_small">The amount you are sending is too small</string>
    <string name="unable_to_build_tx">Unable to build transaction</string>
    <string name="amount_too_small_short">Amount too small</string>
    <string name="miner_fee_label">Miner fee:</string>
    <string name="miner_fee_title">Miner Fee</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="transaction_not_sent">Failed to broadcast transaction</string>
    <string name="queue_transaction_message">Failed to broadcast transaction.\nWould you like to queue the transaction so it gets sent automatically once you get online?</string>
    <string name="transaction_sent">Transaction sent</string>
    <string name="export">Export</string>
    <string name="backup_private_key">Backup</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copy_private_key_to_clipboard">Copy Private Key to Clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="private_key">Private Key</string>
    <string name="bitcoin_address_title">Bitcoin Address</string>
    <string name="approximate_fiat_value">%2$s %1$s</string>
    <string name="no_server_connection">No Server Connection</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="invalid_bitcoin_uri">Invalid Bitcoin URI</string>
    <string name="unrecognized_format">Unrecognized format</string>
    <string name="unrecognized_private_key_format">Unrecognized private key format</string>
    <string name="no_transaction_records">This page shows your transaction history.\n\nThere are currently no transactions to show.</string>
    <string name="no_address_book_records">This page shows your address book.\n\nYour address book is empty.</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_address_label_title">Edit Address Label</string>
    <string name="enter_address_label_title">Enter Address Label</string>
    <string name="enter_transaction_label_title">Enter Transaction Label</string>
    <string name="set_label">Set Label</string>
    <string name="show_details">Show Details</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="hash">Hash</string>
    <string name="confirmed">Confirmed</string>
    <string name="date">Date</string>
    <string name="inputs">Inputs</string>
    <string name="outputs">Outputs</string>
    <string name="confirmed_in_block">In block #%1$d</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pref_category_pin">PIN Settings</string>
    <string name="pref_clear_pin">Clear PIN Code</string>
    <string name="pref_clear_pin_summary">Clear the current PIN code</string>
    <string name="pref_set_pin">Set PIN Code</string>
    <string name="pref_set_pin_summary">Set a PIN code that restricts access to sending coins, exporting private keys, and changing the PIN code</string>
    <string name="pref_local_currency">Local Currency</string>
    <string name="pref_local_currency_with_currency">Local Currency (%1$s)</string>
    <string name="pref_local_currency_summary">Select the local fiat currency</string>
    <string name="pref_exchange_source">Exchange Source</string>
    <string name="pref_exchange_source_with_value">Exchange Source (%1$s)</string>
    <string name="pref_exchange_source_summary">Select the source for obtaining exchange rates between Bitcoin and fiat currencies</string>
    <string name="pref_bitcoin_denomination">Bitcoin Denomination</string>
    <string name="pref_bitcoin_denomination_with_denomination">Denomination (%1$s)</string>
    <string name="pref_bitcoin_denomination_summary">Set preferred Bitcoin denomination. BTC, mBTC, or μBTC</string>
    <string name="pref_advanced_settings">Advanced Settings</string>
    <string name="pref_socks_proxy">Socks Proxy</string>
    <string name="pref_socks_proxy_enabled">Socks Proxy (Enabled)</string>
    <string name="pref_socks_proxy_not_enabled">Socks Proxy (Not enabled)</string>
    <string name="pref_socks_proxy_summary">Communicate through restrictive firewalls or through Tor using Orbot. Enter a host name and port, e.g. \'localhost:9050\'</string>
    <string name="pref_pin_require_on_startup_summary">To improve your privacy</string>
    <string name="pref_pin_require_on_startup">Require PIN on start</string>
    <string name="settings">Settings</string>
    <string name="pin_backup_first">You cannot set a PIN before you have made a backup of your master seed.</string>
    <string name="pin_invalid_pin">Invalid PIN code</string>
    <string name="pin_enter_pin">Enter PIN Code</string>
    <string name="pin_cleared">PIN code cleared</string>
    <string name="pin_enter_new_pin">Enter new PIN Code</string>
    <string name="pin_codes_dont_match">The two PIN codes do not match</string>
    <string name="pin_set">PIN code set</string>
    <string name="pin_confirm_pin">Confirm PIN Code</string>
    <string name="build_text">v%1$s</string>
    <string name="delete_address_confirmation">Are you sure that you want to delete this address from your address book?</string>
    <string name="add_to_addressbook">Add to address book</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="payment_request">Payment Request</string>
    <string name="export_account_data_warning">You are about to export sensitive data of the selected account.\n\nAnyone who gains access to these keys can either take possession of the bitcoin it controls or gain information that might subvert your privacy.\n\nDo you want to continue?</string>
    <string name="get_private_key">Get private key from:</string>
    <string name="cold_storage">Cold Storage</string>
    <string name="cold_storage_title">Cold Storage Spending</string>
    <string name="cold_storage_desc">You are about to spend from a private key in cold storage. This could be a private key paper backup or a private key slip from a Bitcoin ATM. Following Formats are supported:\nPrivate Key, Master Seed, xPriv Key\n\nOnce the transaction has been sent every trace of it will be erased from the internal memory.</string>
    <string name="add_key">Add Account</string>
    <string name="add_fiat_key">Add Fiat Account</string>
    <string name="lock_label">Lock</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="help_menu">Help</string>
    <string name="pref_change_language">Change Language</string>
    <string name="lt_pref_category">Local Trader</string>
    <string name="lt_disable_preference">Disable Local Trader</string>
    <string name="lt_disable_preference_summary">Disable Local Trader functionality</string>
    <string name="lt_sound_on_trade_preference">Play Sound on Trade Activity</string>
    <string name="lt_sound_on_trade_preference_summary">Play a notification sound when trade activity occurs</string>
    <string name="lt_use_email_for_notifications">Use email for notifications</string>
    <string name="lt_miles_kilometers_preference">Use Miles for Distances</string>
    <string name="lt_miles_kilometers_preference_summary">Use miles instead of kilometers for distances</string>
    <string name="email_notification_setting_explanation">Set your email address to receive notifications from Local Trader</string>
    <string name="pref_legacy_backup_title">Legacy Backup</string>
    <string name="pref_legacy_backup_summary">Create a legacy backup, containing your single address accounts.</string>
    <string name="pref_legacy_backup_verify_title">Verify legacy Backup</string>
    <string name="pref_legacy_backup_verify_summary">Verify an existing legacy backup</string>
    <string name="transaction_label_title">Transaction Label</string>
    <string name="add_advanced_account_warning">Warning:\n These keys won\'t be included in your Master-Seed-Backup. You have to ensure that you have a separate backup of them.</string>
    <string name="new_random_key_desc">Generate new random key</string>
    <string name="generate_new_key">Generate</string>
    <string name="trezor">Trezor</string>
    <string name="pref_ledger_title">Ledger Hardware Wallet</string>
    <string name="ledger_disable_tee_preference">Disable TEE support</string>
    <string name="ledger_disable_tee_preference_summary">Disable Trusted Execution Environment support if present to use a different Ledger Hardware Wallet</string>
    <string name="useTor">Use tor-network</string>
    <string name="useTorDescription">Use the tor-network to communicate with the backend servers.\nThis improves your privacy and may route around restrictive Firewalls. But it may slowdown the performance of this app.</string>
    <string name="cashila_sepa_transfer">Euro Payment</string>
    <string name="label_cold_storage_external_signing">Sign with:</string>
    <string name="pop_send_pop_to">Prove to</string>
    <string name="pop_transaction_info">Prove Payment</string>
    <string name="pop_prove">Prove</string>
    <string name="pop_select_other_tx">Select another</string>
</resources>