<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
            android:id="@+id/miBackup"
            android:title="@string/backup_private_key"/>
    <!--
    <item
        android:id="@+id/miVerifyBackup"
        android:title="@string/verify_private_key_backup"/>
        -->
    <item
            android:id="@+id/miColdStorage"
            yourapp:showAsAction="never"
            android:title="@string/cold_storage"/>
    <item
            android:id="@+id/miSepaSend"
            yourapp:showAsAction="never"
            android:title="@string/cashila_sepa_transfer"/>
    <item
            android:id="@+id/miExplore"
            android:title="@string/explore"
            android:visible="false"/>
    <item
            android:id="@+id/miAbout"
            android:title="@string/about"/>
    <item
            android:id="@+id/miHelp"
            android:title="@string/help_menu"/>
    <item
            android:id="@+id/miSettings"
            android:title="@string/settings"/>

</menu>