<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/miAddRecord"
            android:icon="@drawable/holo_dark_ic_action_new_account"
            android:title="@string/add_key"
            yourapp:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/miAddFiatAccount"
            android:icon="@drawable/holo_dark_ic_action_new_usd_account"
            android:title="@string/add_fiat_key"
            yourapp:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/miLockKeys"
            android:icon="@drawable/holo_dark_ic_action_secure"
            android:title="@string/lock_label"
            yourapp:showAsAction="ifRoom|withText"/>

</menu>