<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_account_title"
            android:textSize="24sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" >
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_account_desc" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" >
        </View>

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp" >
        </View>

        <Button
            android:id="@+id/btHdCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/hd_account" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp" >
        </View>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/add_single_acc_info" />

        <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" >
        </View>

        <Button
            android:id="@+id/btAdvanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/advanced" />

    </LinearLayout>
</ScrollView>